unpackaged/main/default/objects/Mezcla__c/Mezcla__c.object-meta.xml
<CustomObject>
    <label>Mezcla</label>
    <nameField>
        <label>Prototipo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mezcla</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>