unpackaged/main/default/objects/Mezcla__c/fields/NumVivienda__c.field-meta.xml
<CustomField>
    <fullName>NumVivienda__c</fullName>
    <label># Vivienda</label>
    <length>15</length>
    <type>Text</type>
</CustomField>