unpackaged/main/default/objects/Mezcla__c/fields/PorcMB__c.field-meta.xml
<CustomField>
    <fullName>PorcMB__c</fullName>
    <label>% MB</label>
    <length>15</length>
    <type>Text</type>
</CustomField>