unpackaged/main/default/objects/Mezcla__c/fields/PorcVivienda__c.field-meta.xml
<CustomField>
    <fullName>PorcVivienda__c</fullName>
    <label>% Vivienda</label>
    <length>15</length>
    <type>Text</type>
</CustomField>