unpackaged/main/default/objects/Mezcla__c/fields/PV__c.field-meta.xml
<CustomField>
    <fullName>PV__c</fullName>
    <label>P.V</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>