unpackaged/main/default/objects/Mezcla__c/fields/Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Solicitud__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitud</label>
    <referenceTo>SolicitudTerreno__c</referenceTo>
    <relationshipLabel>Mezcla</relationshipLabel>
    <relationshipName>Mezcla</relationshipName>
    <type>Lookup</type>
</CustomField>