unpackaged/main/default/objects/Mezcla__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PorcVivienda__c</columns>
    <columns>NumVivienda__c</columns>
    <columns>PV__c</columns>
    <columns>PorcMB__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>